--- a/src/etc/config.xml.sample
+++ b/src/etc/config.xml.sample
@@ -196,7 +196,7 @@
   </sysctl>
   <system>
     <optimization>normal</optimization>
-    <hostname>OPNsense</hostname>
+    <hostname>kontrol</hostname>
     <domain>localdomain</domain>
     <dnsallowoverride/>
     <group>
@@ -213,13 +213,13 @@
       <descr><![CDATA[System Administrator]]></descr>
       <scope>system</scope>
       <groupname>admins</groupname>
-      <password>$2b$10$YRVoF4SgskIsrXOvOQjGieB9XqHPRra9R7d80B3BZdbY/j21TwBfS</password>
+      <password>$2b$10$RBuDUfrFT1/xjYefMwtWF.nq1R.3Fri8k7h2e4fgFKYldcWwMr8FC</password>
       <uid>0</uid>
     </user>
     <nextuid>2000</nextuid>
     <nextgid>2000</nextgid>
     <timezone>Etc/UTC</timezone>
-    <timeservers>0.opnsense.pool.ntp.org 1.opnsense.pool.ntp.org 2.opnsense.pool.ntp.org 3.opnsense.pool.ntp.org</timeservers>
+    <timeservers>a.st1.ntp.br</timeservers>
     <webgui>
       <protocol>https</protocol>
     </webgui>
@@ -369,7 +369,7 @@
     </monitor_type>
   </load_balancer>
   <ntpd>
-    <prefer>0.opnsense.pool.ntp.org</prefer>
+    <prefer>a.st1.ntp.br</prefer>
   </ntpd>
   <widgets>
     <sequence>system_information-container:00000000-col3:show,services_status-container:00000001-col4:show,gateways-container:00000002-col4:show,interface_list-container:00000003-col4:show</sequence>
