CHANGED TO KONTROL

--- a/src/opnsense/service/templates/OPNsense/Auth/motd.in
+++ b/src/opnsense/service/templates/OPNsense/Auth/motd.in
@@ -1,9 +1,9 @@
 ----------------------------------------------
-|      Hello, this is OPNsense %%CORE_ABI%%          |         @@@@@@@@@@@@@@@
-|                                            |        @@@@         @@@@
-| Website:	https://opnsense.org/        |         @@@\\\   ///@@@
-| Handbook:	https://docs.opnsense.org/   |       ))))))))   ((((((((
-| Forums:	https://forum.opnsense.org/  |         @@@///   \\\@@@
-| Lists:	https://lists.opnsense.org/  |        @@@@         @@@@
-| Code:		https://github.com/opnsense  |         @@@@@@@@@@@@@@@
-----------------------------------------------
+|      WELCOME TO KONTROL   %%CORE_ABI%%     |      @@@@       @@@@
+|                                            |      @@@@     @@@@@
+| Website:	http://kontrolsecurity.com.br    |      @@@@  @@@@@
+|                                            |      @@@@@@@@    KONTROL
+|                                            |      @@@@@@@@      UTM
+|                                            |      @@@@  @@@@@
+|                                            |      @@@@     @@@@@
+----------------------------------------------      @@@@       @@@@
