CHANGED TO KONTROL

--- a/src/opnsense/service/templates/OPNsense/Auth/motd.in
+++ b/src/opnsense/service/templates/OPNsense/Auth/motd.in
@@ -1,7 +1,7 @@
 ----------------------------------------------
-|      WELCOME TO KONTROL   %%CORE_ABI%%     |      @@@@       @@@@
+|             WELCOME TO KONTROL             |      @@@@       @@@@
 |                                            |      @@@@     @@@@@
-| Website:	http://kontrolsecurity.com.br    |      @@@@  @@@@@
+|        http://kontrolsecurity.com.br       |      @@@@  @@@@@
 |                                            |      @@@@@@@@    KONTROL
 |                                            |      @@@@@@@@      UTM
 |                                            |      @@@@  @@@@@
